hphp/hack/test/typecheck/class_property_initialization/list_non_static.php.exp
File "list_non_static.php", line 8, characters 45-49:
Initialization of class property must be a static literal expression. (Typing[4152])
